--- a/index.html
+++ b/index.html
@@ -74,28 +74,27 @@
     </section>
     <section class="u-clearfix u-section-2" id="sec-6e7c">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img src="images/98697f8a5035ec93bad682b65a13f41c.jpeg" alt="" class="u-align-left u-expanded-width-xs u-image u-left-0 u-image-1">
-        <img src="images/2fa540df7187a7eeb5f596f9d0726e2d.jpeg" alt="" class="u-align-left u-image u-right-0 u-image-2">
+        <img src="images/river-environment.jpeg" alt="" class="u-align-left u-expanded-width-xs u-image u-left-0 u-image-1">
+        <img src="images/riverflows.jpeg" alt="" class="u-align-left u-image u-right-0 u-image-2">
         <div class="u-align-left u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-right-0 u-group-1">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <h2 class="u-text u-text-1">the sky, the mountain, the tree...</h2>
+            <h2 class="u-text u-text-1">As long as the grass grows...</h2>
             <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
-            <p class="u-text u-text-2">“I declare this world is so beautiful that I can hardly believe it exists.” The beauty of nature can have a profound effect upon our senses, those gateways from the outer world to the inner, whether it results in disbelief in its very
-                        existence as Emerson notes, or feelings such as awe, wonder, or amazement.&nbsp;</p>
+            <p class="u-text u-text-2">“The words 'as long as the sun shines, as long as the waters flow downhill, and as long as the grass grows green' can be found in many treaties after the 1613 treaty", Oren Lyons, Faith Keeper, Onondaga Nation.&nbsp;</p>
           </div>
         </div>
         <div class="u-container-style u-expanded-width-xs u-group u-group-2">
           <div class="u-container-layout u-valign-middle-lg u-valign-middle-xl u-container-layout-2"><span class="u-icon u-icon-circle u-text-grey-10 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 95.333 95.332" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-dd14"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-dd14" x="0px" y="0px" viewBox="0 0 95.333 95.332" style="enable-background:new 0 0 95.333 95.332;" xml:space="preserve" class="u-svg-content"><g><g><path d="M30.512,43.939c-2.348-0.676-4.696-1.019-6.98-1.019c-3.527,0-6.47,0.806-8.752,1.793    c2.2-8.054,7.485-21.951,18.013-23.516c0.975-0.145,1.774-0.85,2.04-1.799l2.301-8.23c0.194-0.696,0.079-1.441-0.318-2.045    s-1.035-1.007-1.75-1.105c-0.777-0.106-1.569-0.16-2.354-0.16c-12.637,0-25.152,13.19-30.433,32.076    c-3.1,11.08-4.009,27.738,3.627,38.223c4.273,5.867,10.507,9,18.529,9.313c0.033,0.001,0.065,0.002,0.098,0.002    c9.898,0,18.675-6.666,21.345-16.209c1.595-5.705,0.874-11.688-2.032-16.851C40.971,49.307,36.236,45.586,30.512,43.939z"></path><path d="M92.471,54.413c-2.875-5.106-7.61-8.827-13.334-10.474c-2.348-0.676-4.696-1.019-6.979-1.019    c-3.527,0-6.471,0.806-8.753,1.793c2.2-8.054,7.485-21.951,18.014-23.516c0.975-0.145,1.773-0.85,2.04-1.799l2.301-8.23    c0.194-0.696,0.079-1.441-0.318-2.045c-0.396-0.604-1.034-1.007-1.75-1.105c-0.776-0.106-1.568-0.16-2.354-0.16    c-12.637,0-25.152,13.19-30.434,32.076c-3.099,11.08-4.008,27.738,3.629,38.225c4.272,5.866,10.507,9,18.528,9.312    c0.033,0.001,0.065,0.002,0.099,0.002c9.897,0,18.675-6.666,21.345-16.209C96.098,65.559,95.376,59.575,92.471,54.413z"></path>
 </g>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg></span>
-            <h4 class="u-text u-text-3">I declare this world is so beautiful that I can hardly believe it exists</h4>
+            <h4 class="u-text u-text-3">Science is only beginning to understand the mysteries of the universe</h4>
           </div>
         </div>
         <div class="u-align-left u-container-style u-expanded-width-xs u-grey-5 u-group u-group-3">
           <div class="u-container-layout u-valign-middle-lg u-container-layout-3">
             <h2 class="u-text u-text-4">Unseen beauty</h2>
             <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-2"></div>
-            <p class="u-text u-text-5">My work explores and reveals the invisible, inviting the viewer to look beyond the seen to appreciate the beauty and mystery of the unseen. </p>
+            <p class="u-text u-text-5">My work explores and reveals the frontiers of science and especially their interfaces to the wonders of the natural world. My interests are as varied as the species on this earth. </p>
           </div>
         </div>
       </div>
