--- a/About.html
+++ b/About.html
@@ -66,13 +66,13 @@
     <footer class="u-clearfix u-footer u-palette-2-dark-3" id="sec-434c"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center u-text u-text-1">Dr. Dube received his bachelor's degree in experimental physics
           from Cornell University and his PhD in experimental physics from Princeton University. Currently Professor
-          Emeritus at RIT and a visiting Fulbright scholar at the University of Manitoba, he has held positions at
+          Emeritus at RIT and a former Assistant Dean for Undergraduate Research, he has been a visiting Fulbright scholar at the University of Manitoba, he has held positions at
           Kitt Peak and Caltech’s JPL, the University of Michigan, the University of Arizona and Yale. He rose to
           the executive level at IBM’s Research Division. He has served the National Academy of Sciences in its
           grant selection process for its Ford Foundation Graduate Program for Minorities, has been an entrepreneur
           and has started two companies within the last 18 years. He is active in developing Native American programs
           at RIT and University of Manitoba. He has mentored students throughout the years as they worked on bachelors,
-          masters and PhD degrees.
+          masters and PhD degrees. Dr. Dube helped the University of Manitoba secure a conference grant....
 
 Dr. Dube, an enrolled member of the Abenaki Nation of Missisquoi and also Mohawk Turtle clan, is a Sequoyah Fellow of AISES.
 He was recently awarded the Ely Parker Award from the American Indian Science and Engineering Society, their
