--- a/About.html
+++ b/About.html
@@ -75,7 +75,7 @@
           masters and PhD degrees. He helped the University of Manitoba secure a conference grant from the Sloan Foundation on Indigenous Science.
 
 Dr. Dube, an enrolled member of the Abenaki Nation of Missisquoi and also Mohawk Turtle clan, is a Sequoyah Fellow of AISES. He was recently elected to the 
-		Board of Directors and is Chair of the Higher Education Committee. 
+		AISES Board of Directors and is Chair of the Higher Education Committee. 
 He was awarded the Ely Parker Award from the American Indian Science and Engineering Society in 2019, their
 highest honor. He holds 21 issued patents and has published a textbook on physics-based computer security. He is
 cofounder of the Native Alumni of Princeton Affinity Group, and has been an alumni interviewer since 2008.
