--- a/About.html
+++ b/About.html
@@ -64,7 +64,7 @@
 
 
     <footer class="u-clearfix u-footer u-palette-2-dark-3" id="sec-434c"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center u-text u-text-1">Dr. Dube received his bachelor's degree in experimental physics
+        <p class="u-align-center u-text u-text-1">Dr. Dube is a Board member of the American Indian Science and Engineering Society (AISES) and is chair of the Higher Education committee. He received his bachelor's degree in experimental physics
           from Cornell University and his PhD in experimental physics from Princeton University. Currently Professor
           Emeritus at RIT and a former Assistant Dean for Undergraduate Research, he has been a visiting Fulbright scholar at the University of Manitoba, he has held positions at
           Kitt Peak and Caltech’s JPL, the University of Michigan, the University of Arizona and Yale. He rose to
@@ -74,8 +74,7 @@
           at RIT and University of Manitoba. He has mentored students throughout the years as they worked on bachelors,
           masters and PhD degrees. He helped the University of Manitoba secure a conference grant from the Sloan Foundation on Indigenous Science.
 
-Dr. Dube, an enrolled member of the Abenaki Nation of Missisquoi and also Mohawk Turtle clan, is a Sequoyah Fellow of AISES. He was recently elected to the 
-		AISES Board of Directors and is Chair of the Higher Education Committee. 
+Dr. Dube, an enrolled member of the Abenaki Nation of Missisquoi and also Mohawk Turtle clan, is a Sequoyah Fellow of AISES. 
 He was awarded the Ely Parker Award from the American Indian Science and Engineering Society in 2019, their
 highest honor. He holds 21 issued patents and has published a textbook on physics-based computer security. He is
 cofounder of the Native Alumni of Princeton Affinity Group, and has been an alumni interviewer since 2008.
